
Users
+ Hero path arrows now reflect movement penalties.
+ Double clicking on an entry in a file selection box will choose that item.
+ Added spanish translation.
+ Multiple events can now occur on the same day.
+ Fixed bug causing obelisks not to be counted past the first visited,
  causing maps like Dragon Rider to now work.
+ Fixed music restarting with every step taken by a player's hero.

Developers
+

April 23, 2009 - Development build r1021

Users
+ Added glowing outlines around currently selected monster in battles.
+ Battle victory/defeat music now plays properly when viewing the summary.
+ Races are no longer grayed out on the scenario panel when restarting a game.
+ All units in battle now deal a minimum of 1 damage, with damage modifiers
  now capped at -30% and 300% as specified in the original manual.
+ Heroes may no longer surrender to non-heroes.
+ Removed 'Upgrade' and 'Dismiss' buttons from monster info dialogs in battle.
+ Fixed bug causing enemy corpses to resurrect with 65000 units.
+ Heroes now receive experience corresponding to amount of damage dealt in battles,
  and the new number displays properly in the summary dialog.
+ Extra income is no longer received on the first day of the game.
+ Added support for Eagle Eye and Necromancy skills.
+ Elves and Rangers will no longer perform hand to hand combat attacks twice.
+ Screenshots now save to files/screenshot_[time].(png|bmp)
+ Starting monster stack sizes are now more in line with Heroes II defaults.
+ Added an info window in the status bar when collecting resources.
+ Added support for Diplomacy skill: monsters will now offer to join you
  if your army is powerful enough.
+ Saving and loading of games has been implemented, as has autosave
  (configured in fheroes2.cfg)
+ Fixed various bugs with heroes learning spells when entering a castle
  and class-specific starting spells. 
+ Fixed a bug in which the computer would take over certain battles in which